Fix handling of x-scheme-handler/* in mimeapps.list parsing.

Since this isn't a known mimetype, such lines were being ignored.

BUG: 358159
FIXED-IN: 5.21